# compressbins

./: .gitignore  LICENSE  README.md  pyproject.toml
src/compressbins/: __init__.py  compressbins.py
src/stringifybins/: __init__.py  myfunctions.py
tests/: perpoundcost.csv  test_compressbins.py  test_myfunctions.py
